# Cincinnati_ML_meetup_2025_09_22

./: .gitignore  01_rest_api.py  02_rest_api_loop.py  03_rest_api_with_buffer.py  04_plotting_matplotlib.py  05_plot_threading_fastplotlib.py  06_record_acc.py  07_identify_motifs.ipynb  07b_identify_motifs_palin.ipynb  07c_find_motifs_normal_walk.ipynb  08_clean_labels_in_labelstudio.sh  08a_labelstudio_labeling_interface_code.txt  09_dynamic_time_warp.ipynb  09_dynamic_time_warp_2.ipynb  10_nearest_neighbor_prediction.py  10a_live_matrix_profile_double_multiprocess.py  11_dtw_for_segment_labeling.ipynb  README.md  _10b_live_matrix_profile.py  _10c_live_matrix_profile_multiprocess.py  _extract_individual_palin_steps.py  _simple_dtw_vis.py  cleese_steps.csv  cleese_steps_2.csv  cleese_steps_3.csv  palin_steps.csv  phyphox_data_1752892425.csv  phyphox_data_1752892757.csv  phyphox_data_20250111_001025.parquet  phyphox_data_20250111_152224.parquet  phyphox_data_20250316_133858.parquet  pyproject.toml
label_studio/: cleese_data.csv  cleese_data.json  cleese_data_2.csv  cleese_data_3.json  forward_walk_data.csv  forward_walk_data.json  palin_data.csv  palin_data.json
label_studio/isolated_Palin_steps/: palin_step_0.json  palin_step_1.json  palin_step_2.json  palin_step_3.json  palin_step_4.json  palin_step_5.json  palin_step_6.json  (+1 more)
label_studio_export/: forward_walk_export.json  label_studio_export.json  palin_parts.json  project-2-at-2025-07-26-03-39-4a2f6183.csv  project-2-at-2025-07-26-03-40-4a2f6183.json  project-2-at-2025-07-26-03-40-4a2f6183_json_min.json
